1998-11-01  Harri Porten  <porten@kde.org>

	* modemcmds.cpp: added a wait&CR&wait sequence before sending the
	init string. This seems to be necessary to avoid locking some modems.

1998-10-29  Harri Porten  <porten@kde.org>

	* connect.cpp: fixed search&replace typo

1998-10-26  Mario Weilguni <mweilguni@kde.org>

	* incorporated new Netherland rules (NetPoint)

1998-10-25  Mario Weilguni <mweilguni@kde.org>

	* added updated rules for Spain

1998-10-06  Mario Weilguni <mweilguni@kde.org>

	* repaired Makefile.am and reverted Hans Petter Bieker's changes
	to something more usefull.
	* added SecurityWidget, but currently there's not much use for
	this widget. Later on, it will allow root to specify who may use
	kppp and pppd.
	* removed the global variable miniIcon
	* removed the global variable dock_widget, replaced with a static
	class variable
	* added lockdevice() and unlockdevice() to the class modem. This
	will finally allow us to have a modem class which handles the
	device locking itself (yeah...)
	* removed the global var "modem", now a static member of the class
	"Modem"
	* modem.cpp: removed some global vars

1998-10-14  Harri Porten  <porten@kde.org>

	* pppdata.cpp: don't care about CD line by default. We'll receive
	too many "bug reports" otherwise.

1998-10-13  Harri Porten  <porten@kde.org>

	* ppplog.cpp: offer some advice based on keywords found in the log
	(very primitive so far, but may be extended later)

1998-10-09  Harri Porten  <porten@kde.org>

	* modem.cpp: additional data flushes
	* pppdata.cpp: don't need workaround for '$' with recent kde libraries

1998-10-05  Mario Weilguni <mweilguni@kde.org>

	* better QuickHelp text, proof-read by a native english
	speaker. Thanks a lot to Martin A. Brown for doing this!

1998-10-04  Harri Porten  <porten@kde.org>

	* miniterm.cpp: fixed toolbar

1998-10-03  Harri Porten  <porten@kde.org>

	* modem.cpp: disentangled Modem class from other Widgets, i.e.